First cut at XSS fixes.